# password-manager

./: .gitignore  README.md  dokumentation.md  grundkonzept.md
backend/: Cargo.toml  db.sqlite3
backend/migrations/2023-11-20-175705_create_user/: down.sql  up.sql
backend/migrations/2023-11-20-180115_create_data/: down.sql  up.sql
backend/migrations/2023-11-28-143751_create_folder/: down.sql  up.sql
backend/src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs
frontend/: .gitignore  angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: api.service.ts  app.component.html  app.component.ts  app.config.ts  app.routes.ts  storage.service.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/vault/: vault.component.html  vault.component.scss  vault.component.spec.ts  vault.component.ts
