[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
#rocket = "0.5.0"
dotenvy = "0.15.7"
chrono = "0.4.31"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
jwt-simple = "0.11.9"
jsonwebtoken = "9.1.0"
argon2 = "0.5.2"
rocket_http = "0.5.0"
rocket_cors = "0.6.0"

[dependencies.rocket]
version = "0.5.0-rc.4"
features = ["json"]
